@@ -2,6 +2,8 @@ AUX graylog2.confd 281 RMD160 2eeb1f5e59e085817e66af11990d97a248aa8dcf SHA1 cf8c
 AUX graylog2.initd 1150 RMD160 67fe9e6b766867c4fc0b5af1cb0037e960ad8ae4 SHA1 a4711f9483cfe2455123266a30f44ccdf94de43b SHA256 f23a42435740d0860058984c6f623a41a0e6e1b57a4ca1953c433beaf6c0823d
 AUX graylog2.initd-r1 1222 RMD160 bf37d0dfefdf828760e04b8022db1a4ecfd4148e SHA1 f66a04af086f67c9a1ff5b4f0c1cc2f24ff87fec SHA256 2f9256aa7f81b3b1d03debdab456ae078d35f31662c09c8f12f92001b428599f
 DIST graylog2-server-0.9.3p1.tar.gz 443549 RMD160 8d9e8c76b9dee9ca327b62e30ceda314bdf813eb SHA1 bb4e433a579d71d6457dee6d1855c624af9e9ba7 SHA256 f7376853b5cb62e7241b9fae63c1fbb4b58a33ba816664ccbeaea2c5fa24f82f
-EBUILD graylog2-0.9.3-r1.ebuild 754 RMD160 66cf158e86293f1333381a84a35d4515662af4be SHA1 db62d189f1342b6ce75ff4fd4a192a488bcc9063 SHA256 29cfbef1efa9e43c87f250dc3e0bb165b03a192ab69161e90beb3fdb7857808d
-EBUILD graylog2-0.9.3.ebuild 1025 RMD160 9a553239215a5283e3b35fe72833bb799439ac2c SHA1 cfe0ee8db8e986fe6c52de883164e87a4ca0ad08 SHA256 eb55e4e1939b607102a52d8f1a511aba92870fdfb8d865fb7422fbf95c080187
-MISC ChangeLog 809 RMD160 7632a4087474c48012edeb50b74a35e96ac577bd SHA1 be7c12b0219fa76bd3913cf93010b11a0cd02a30 SHA256 c2e166aa108b4ec81211ca274a443b36ff0d2c40a5bc6f3404c12924e641fc5d
+DIST graylog2-server-0.9.4.tar.gz 442264 RMD160 1f3df8cb666a588250a8c110a88d8b4c8c491693 SHA1 e573aafead6cb2662ca30248d4e412c893639454 SHA256 4f78fa583bf98d023d7fd9d0fa8e3f75940a7652df71b3fad1c8bf6f9f2b08a9
+EBUILD graylog2-0.9.3-r1.ebuild 747 RMD160 e267b8907c64ebcb316be076aa59a7f45346419f SHA1 09991ac28acceeca9d8001469c3c007e7a19e250 SHA256 f8de448ba672a22538823a5e5a3fcf0212dbadb5540afb368a12244a2c9a95cb
+EBUILD graylog2-0.9.3.ebuild 1020 RMD160 3196bd4573c64d845d7fc72d68d1581eba24a789 SHA1 9db1cb64cf4a4d1b145a34b75400f524fec63b10 SHA256 6fb40ffd8cc254dd839ae405d7df7e4cc6fe363cecd38e438d2957fa52742e0b
+EBUILD graylog2-0.9.4.ebuild 745 RMD160 ce0f06bb77b31c5eee1ebaee65b1de2efd825d76 SHA1 2ca445a1545211732fb6c5cf6eb429546e1d3f62 SHA256 fdf030d4f0df32bb5285f6633fcc26aef3d21731458bfb3a3b8e2ddf74fb3f92
+MISC ChangeLog 1022 RMD160 a264555b5a9cc473e3d31c26f7c9a69fedac55b8 SHA1 1f6c24c61b21a526af463f0f3257627eeda6b8a6 SHA256 acdbc5aa52fa40ec386d716fe2a10cb0eaa6300b363198a48dcefefaa1c6e09c
