@@ -3,7 +3,7 @@ EAPI=2
 inherit eutils
 
 MY_PN=${PN}-server
-MY_P=${MY_PN}-${PV}p1
+MY_P=${MY_PN}-${PV}
 
 GL2_INSTALL=/usr/share/${PN}
 
@@ -16,7 +16,7 @@ SLOT="0"
 KEYWORDS="~amd64 ~x86"
 IUSE=""
 
-RDEPEND="dev-db/mongodb virtual/jdk"
+RDEPEND="virtual/jdk"
 
 S="${WORKDIR}/${MY_P}"
 
@@ -26,19 +26,9 @@ src_install() {
 	fperms 660 /etc/graylog2.conf || die "fperms failed"
 
 	insinto ${GL2_INSTALL}
-
 	doins graylog2-server.jar || die "installing jar failed"
 
-	newinitd "${FILESDIR}/${PN}.initd" ${PN} || die "newinitd failed"
-	newconfd "${FILESDIR}/${PN}.confd" ${PN} || die "newconfd failed"
-
-	dodoc README build_date || die "dodoc failed"
-
-	keepdir /var/log/${PN} || die "keepdir failed"
-}
-
-pkg_preinst() {
-	dosed "s:CHANGEME:${GL2_INSTALL}:" "etc/conf.d/${PN}" || die "dosed failed"
+	newinitd "${FILESDIR}/${PN}.initd-r1" ${PN} || die "newinitd failed"
 }
 
 pkg_postinst() {
